src/main/java/com/conceptualgraph/cgif/parser/javacc/CGIFParser.java
/* CGIFParser.java */
/* Generated By:JavaCC: Do not edit this line. CGIFParser.java */
package com.conceptualgraph.cgif.parser.javacc;

import com.conceptualgraph.cgif.parser.CGIFSubtypeException;
import com.conceptualgraph.cgif.parser.CGIFVariableException;
import java.io.ByteArrayInputStream;
import java.io.InputStream;
import com.conceptualgraph.cgif.parser.CGIFParserHelper;
import com.conceptualgraph.charger.Global;
import com.conceptualgraph.charger.obj.Graph;
import com.conceptualgraph.charger.obj.Concept;
import com.conceptualgraph.charger.obj.Relation;
import com.conceptualgraph.charger.obj.Referent;

import java.io.Reader;
import java.util.ArrayList;

public class CGIFParser implements CGIFParserConstants {
    private CGIFParserHelper helper = new CGIFParserHelper();
    private Graph topGraph = new Graph();

    public  Graph parseCGIFString( String contents ) throws ParseException {
        InputStream is = new ByteArrayInputStream(contents.getBytes());
        ReInit( is );
        topLevelGraph( );
        return topGraph;
    }

    public void reset() {
        this.ReInit( (Reader) null );
        topGraph.dispose();
        topGraph = new Graph();
        helper.referents.clear();
    }

    public Graph getGraph() {
        return topGraph;
    }

  final public void topLevelGraph() throws ParseException {
    trace_call("topLevelGraph");
    try {

      graph(null);
      jj_consume_token(0);
    } finally {
      trace_return("topLevelGraph");
    }
}

  final public Graph graph(Graph enclosingGraph) throws ParseException {
    trace_call("graph");
    try {
Graph g;
    if ( enclosingGraph == null ) g = topGraph;
    else g = new Graph( enclosingGraph );
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LPAREN:
        case LBRACKET:
        case LESSTHAN:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        cgifTerm(g);
      }
{if ("" != null) return g;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("graph");
    }
}

  final public void cgifTerm(Graph g) throws ParseException {
    trace_call("cgifTerm");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACKET:{
        concept(g);
        break;
        }
      case LPAREN:{
        relation(g);
        break;
        }
      case LESSTHAN:{
        actor(g);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("cgifTerm");
    }
}

  final public void concept(Graph g) throws ParseException {
    trace_call("concept");
    try {
Token tBracket;
    Token tType = null;
    Referent referent = null;
    Concept concept = null;
    Graph graph = null;
      if (jj_2_1(3)) {
        jj_consume_token(LBRACKET);
        tType = jj_consume_token(TYPE);
        jj_consume_token(COLON);
        referent = referent();
        tBracket = jj_consume_token(RBRACKET);
if (Global.importSubtypeRelationsAsHierarchy ) {
            try {
                helper.makeTypeLabel( g, referent.getReferentString(), helper.extractChargerComment( tType, tBracket ) );
            } catch ( CGIFSubtypeException ex ) { Global.error( "Error: " + ex.getMessage() ); }
        } else {
            concept = helper.makeConcept( g, "Type", referent, helper.extractChargerComment( tType, tBracket ) );
        }
      } else if (jj_2_2(4)) {
        jj_consume_token(LBRACKET);
        tType = typelabel();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COLON:{
          jj_consume_token(COLON);
          referent = referent();
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          ;
        }
        tBracket = jj_consume_token(RBRACKET);
// FIX: The helper must link the referent (which contains the *x1 handle) to this concept
        concept = helper.makeConcept( g, tType.image, referent, helper.extractChargerComment( tType, tBracket ) );
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACKET:{
          jj_consume_token(LBRACKET);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COLON:
          case QUOTED_STRING:
          case IDENTIFIER:{
            tType = typelabel();
            jj_consume_token(COLON);
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            ;
          }
          graph = graph(g);
          tBracket = jj_consume_token(RBRACKET);
if ( tType != null ) graph.setTextLabel( tType.image );
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("concept");
    }
}

  final public Token typelabel() throws ParseException {
    trace_call("typelabel");
    try {
Token first = null;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        first = jj_consume_token(IDENTIFIER);
{if ("" != null) return first;}
        break;
        }
      case QUOTED_STRING:{
        first = jj_consume_token(QUOTED_STRING);
{if ("" != null) return first;}
        break;
        }
      default:
        jj_la1[5] = jj_gen;
first = new Token(); first.image = ""; {if ("" != null) return first;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("typelabel");
    }
}

  final public Referent referent() throws ParseException {
    trace_call("referent");
    try {
Token t = null;
    Referent ref = null;
      if (jj_2_3(2)) {
        jj_consume_token(QUESTIONMARK);
        t = jj_consume_token(IDENTIFIER);
ref = new Referent();
        ref.setVariable("?" + t.image);
        ref.setReferentString("?" + t.image, false);
        {if ("" != null) return ref;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case STAR:{
          jj_consume_token(STAR);
          t = jj_consume_token(IDENTIFIER);
ref = new Referent();
        ref.setVariable("*" + t.image);
        // FIX: Ensure the referent string is set to the variable handle for lookup
        ref.setReferentString("*" + t.image, false);
        {if ("" != null) return ref;}
          break;
          }
        case IDENTIFIER:{
          t = jj_consume_token(IDENTIFIER);
ref = new Referent(t.image);
        ref.setReferentString(t.image, false);
        {if ("" != null) return ref;}
          break;
          }
        case QUOTED_STRING:{
          t = jj_consume_token(QUOTED_STRING);
ref = new Referent(t.image);
        ref.setReferentString(t.image, false);
        {if ("" != null) return ref;}
          break;
          }
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:{
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INTEGER_LITERAL:{
            t = jj_consume_token(INTEGER_LITERAL);
            break;
            }
          case FLOATING_POINT_LITERAL:{
            t = jj_consume_token(FLOATING_POINT_LITERAL);
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
ref = new Referent();
        ref.setReferentString(t.image, false);
        ref.setNumber(Double.parseDouble(t.image));
        {if ("" != null) return ref;}
          break;
          }
        case LBRACE:{
          ref = setReferent();
{if ("" != null) return ref;}
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("referent");
    }
}

  final public void relation(Graph g) throws ParseException {
    trace_call("relation");
    try {
Token rname;
    Token rparen;
    Relation relation = null;
    Referent r = null;
    ArrayList<String> variables = new ArrayList<String>();
      if (jj_2_4(4)) {
        jj_consume_token(LPAREN);
        rname = jj_consume_token(SUBTYPE);
        jj_consume_token(IDENTIFIER);
        jj_consume_token(IDENTIFIER);
        rparen = jj_consume_token(RPAREN);

      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LPAREN:{
          jj_consume_token(LPAREN);
          rname = jj_consume_token(IDENTIFIER);
          label_2:
          while (true) {
            r = referent();
// FIX: This sends the handle (e.g. *x1) to the helper
            if ( r.getVariable() != null )
                variables.add( r.getVariable() );
            else
                variables.add( r.getReferentString() );
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case LBRACE:
            case QUESTIONMARK:
            case STAR:
            case INTEGER_LITERAL:
            case FLOATING_POINT_LITERAL:
            case QUOTED_STRING:
            case IDENTIFIER:{
              ;
              break;
              }
            default:
              jj_la1[8] = jj_gen;
              break label_2;
            }
          }
          rparen = jj_consume_token(RPAREN);
try {
            relation = helper.makeRelation( g, rname.image, variables, helper.extractChargerComment( rname, rparen ) );
        } catch ( CGIFVariableException ex ) { Global.warning( "Error: " + ex.getMessage() ); }
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("relation");
    }
}

  final public void actor(Graph g) throws ParseException {
    trace_call("actor");
    try {
Token aname;
    Token rparen;
    Referent r = null;
    ArrayList<String> inputvariables = new ArrayList<String>();
    ArrayList<String> outputvariables = new ArrayList<String>();
      jj_consume_token(LESSTHAN);
      aname = jj_consume_token(IDENTIFIER);
      label_3:
      while (true) {
        r = referent();
inputvariables.add( r.getVariable() );
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACE:
        case QUESTIONMARK:
        case STAR:
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case QUOTED_STRING:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_3;
        }
      }
      jj_consume_token(BAR);
      label_4:
      while (true) {
        r = referent();
outputvariables.add( r.getVariable() );
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACE:
        case QUESTIONMARK:
        case STAR:
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case QUOTED_STRING:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_4;
        }
      }
      rparen = jj_consume_token(GREATERTHAN);
try {
            helper.makeActor( g, aname.image, inputvariables, outputvariables, helper.extractChargerComment( aname, rparen ) );
        } catch ( Exception ex ) { Global.warning( "Error: " + ex.getMessage() ); }
    } finally {
      trace_return("actor");
    }
}

  final public String variable() throws ParseException {
    trace_call("variable");
    try {
String prefix = null; Token var = null;
      prefix = prefix();
      var = jj_consume_token(IDENTIFIER);
{if ("" != null) return (prefix == null ? "" : prefix) + var.image;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("variable");
    }
}

  final public String prefix() throws ParseException {
    trace_call("prefix");
    try {
Token pre = null;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case QUESTIONMARK:{
        pre = jj_consume_token(QUESTIONMARK);
{if ("" != null) return pre.image;}
        break;
        }
      case STAR:{
        pre = jj_consume_token(STAR);
{if ("" != null) return pre.image;}
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("prefix");
    }
}

  final public Referent setReferent() throws ParseException {
    trace_call("setReferent");
    try {
Referent ref = new Referent(); Referent r; String card = null;
      jj_consume_token(LBRACE);
      r = referent();
ref.addSetMember( r );
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        r = referent();
ref.addSetMember( r );
      }
      jj_consume_token(RBRACE);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ATSIGN:{
        card = cardinality();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
if ( card != null ) ref.setCardinality( card ); {if ("" != null) return ref;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("setReferent");
    }
}

  final public String cardinality() throws ParseException {
    trace_call("cardinality");
    try {
Token d = null;
      jj_consume_token(ATSIGN);
      d = jj_consume_token(INTEGER_LITERAL);
{if ("" != null) return d.image;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("cardinality");
    }
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_3R_referent_177_5_15()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(29)) {
    jj_scanpos = xsp;
    if (jj_scan_token(33)) return true;
    }
    return false;
  }

  private boolean jj_3R_referent_149_5_11()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3R_referent_157_5_12()) {
    jj_scanpos = xsp;
    if (jj_3R_referent_165_5_13()) {
    jj_scanpos = xsp;
    if (jj_3R_referent_171_5_14()) {
    jj_scanpos = xsp;
    if (jj_3R_referent_177_5_15()) {
    jj_scanpos = xsp;
    if (jj_3R_referent_184_5_16()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_scan_token(QUESTIONMARK)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3R_referent_171_5_14()
 {
    if (jj_scan_token(QUOTED_STRING)) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_scan_token(LPAREN)) return true;
    if (jj_scan_token(SUBTYPE)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_scan_token(LBRACKET)) return true;
    if (jj_3R_typelabel_138_5_6()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_concept_125_36_7()) jj_scanpos = xsp;
    if (jj_scan_token(RBRACKET)) return true;
    return false;
  }

  private boolean jj_3R_referent_165_5_13()
 {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3R_typelabel_140_5_10()
 {
    return false;
  }

  private boolean jj_3R_typelabel_139_5_9()
 {
    if (jj_scan_token(QUOTED_STRING)) return true;
    return false;
  }

  private boolean jj_3R_referent_184_5_16()
 {
    if (jj_3R_setReferent_248_5_17()) return true;
    return false;
  }

  private boolean jj_3R_typelabel_138_5_6()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_typelabel_138_5_8()) {
    jj_scanpos = xsp;
    if (jj_3R_typelabel_139_5_9()) {
    jj_scanpos = xsp;
    if (jj_3R_typelabel_140_5_10()) return true;
    }
    }
    return false;
  }

  private boolean jj_3R_typelabel_138_5_8()
 {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_scan_token(LBRACKET)) return true;
    if (jj_scan_token(TYPE)) return true;
    if (jj_scan_token(COLON)) return true;
    return false;
  }

  private boolean jj_3R_referent_157_5_12()
 {
    if (jj_scan_token(STAR)) return true;
    return false;
  }

  private boolean jj_3R_setReferent_248_5_17()
 {
    if (jj_scan_token(LBRACE)) return true;
    return false;
  }

  private boolean jj_3R_concept_125_36_7()
 {
    if (jj_scan_token(COLON)) return true;
    if (jj_3R_referent_149_5_11()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public CGIFParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[15];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x101400,0x101400,0x4000,0x4000,0x1000,0x0,0x20000000,0x20010100,0x20018100,0x400,0x20018100,0x20018100,0x18000,0x20000,0x40000,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x0,0x28,0x0,0x28,0x2,0x2a,0x2a,0x0,0x2a,0x2a,0x0,0x0,0x0,};
	}
  final private JJCalls[] jj_2_rtns = new JJCalls[4];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  {
      enable_tracing();
  }
  /** Constructor with InputStream. */
  public CGIFParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public CGIFParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new CGIFParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 15; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 15; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public CGIFParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new CGIFParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 15; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new CGIFParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 15; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public CGIFParser(CGIFParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 15; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(CGIFParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 15; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   if (++jj_gc > 100) {
		 jj_gc = 0;
		 for (int i = 0; i < jj_2_rtns.length; i++) {
		   JJCalls c = jj_2_rtns[i];
		   while (c != null) {
			 if (c.gen < jj_gen) c.first = null;
			 c = c.next;
		   }
		 }
	   }
	   trace_token(token, "");
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }

  @SuppressWarnings("serial")
  static private final class LookaheadSuccess extends java.lang.Error {
    @Override
    public Throwable fillInStackTrace() {
      return this;
    }
  }
  static private final LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
	 if (jj_scanpos == jj_lastpos) {
	   jj_la--;
	   if (jj_scanpos.next == null) {
		 jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
	   } else {
		 jj_lastpos = jj_scanpos = jj_scanpos.next;
	   }
	 } else {
	   jj_scanpos = jj_scanpos.next;
	 }
	 if (jj_rescan) {
	   int i = 0; Token tok = token;
	   while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
	   if (tok != null) jj_add_error_token(kind, i);
	 }
	 if (jj_scanpos.kind != kind) return true;
	 if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
	 return false;
  }

